# mlcourse

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
datasets/: diabetes.csv
labs/: essential_tools.md
labs/classify_2d_data/: README.md
labs/classify_common_images/: README.md
labs/essential_tools/: README.md
labs/predict_heart_disease/: README.md  test_predict_heart_disease.py
labs/pytorch/: README.md
labs/pytorch_intro/: README.md
labs/recognize_handwritten_digits/: README.md
lectures/about_ai/: README.md
lectures/classification_performance/: README.md  test_classification_performance.py
lectures/convolutional_neural_networks/: README.md  test_convolutional_neural_network.py
lectures/decision_trees_random_forests/: README.md
lectures/feedforward_neural_networks/: README.md
lectures/gradient_descent/: README.md
lectures/large_language_models/: README.md
lectures/linear_regression/: README.md
lectures/ml_introduction/: README.md
lectures/project_workflow/: README.md  test_project_workflow.py
lectures/pytorch_intro/: README.md  test_linear_regression.py  test_logistic_regression.py
lectures/recurrent_neural_networks/: README.md
lectures/rl_bandits/: README.md  test_rl_bandits.py
lectures/rl_dp/: test_gridworld.py
lectures/rl_introduction/: README.md  (+1 more)
mlcourse/: test_california_housing_prices.py  test_classification_performance.py  test_convolutional_neural_network.py  test_feedforward_neural_networks.py  test_handwritten_digits.py  test_linear_regression.py  test_ml_project_workflow.py
(+58 files in other folders)
