[project]
name = "mlcourse"
version = "0.1.2"
description = "Public material for my Machine Learning course"
license = "CC BY-NC-SA, MIT"
license-files = ["LICENSE", "CODE_LICENSE"]
readme = "README.md"
authors = [
    { name = "Baptiste Pesquet", email = "bpesquet@gmail.com" }
]
keywords = ["machine learning", "ml", "course", "python"]
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
